--- a/AKRDforHIPPO2a.Rnw
+++ b/AKRDforHIPPO2a.Rnw
@@ -89,6 +89,8 @@ Project = "HIPPO-2"
 ProjectDir <- "HIPPO"
 fname = sprintf("%s%s/%s%s.nc", Directory,ProjectDir,Project,Flight)
 VarList <- c("ADIFR", "VSPD", "VSPD_G", "PITCH", "QCF", "PSF", "AKRD", "WIC", "TASF", "GGALT", "ROLL", "PSXC", "ATX")
+## add variables needed to recalculate wind
+VarList <- c(VarList, "TASX", "ATTACK", "SSLIP", "GGVEW", "GGVNS", "VEW", "VNS", "THDG")
 # Data <- getNetCDF (fname, VarList)		#XXX set variables needed here
 SaveRData <- sprintf("%s.Rdata", thisFileName)
 
@@ -143,11 +145,7 @@ if (ReloadData) {
     D$GGVS <- signal::sgolayfilt (.ggalt, 3, 7, m=1)  # m=1 for first deriv.
     # if (fno == 1) {D <- D[setRange (D$Time, 174000, 221000), ]}
     # if (fno == 2) {D <- D[setRange (D$Time, 151000, 210000), ]}
-    if (exists ("Data")) {
-      Data <- rbind (Data, D)
-    } else {
-      Data <- D
-    }
+    Data <- rbind (Data, D)
   }
   Data <- Data[Data$TASF > 130, ]
   Data <- Data[abs(Data$ROLL) < 4, ]
@@ -158,7 +156,7 @@ if (ReloadData) {
 ## SPECIAL ##
 # best: Data$VSPD_G <- Data$VSPD_G * 0.98  ## residual from 0.152 to 0.148
 # this doesn't help, either sign: Data$VSPD_G <- Data$VSPD_G + 0.05
-Data$VSPD_G <- 0.06 + 0.98 * Data$VSPD_G  ## removes cal coefficients in processing
+Data$VSPD_G <- 0.06 + Data$VSPD_G/1.02  ## removes cal coefficients in processing
 D3 <- Data[Data$RF == 3, ]
 D5 <- Data[Data$RF == 5, ]
 D3 <- D3[!is.na(D3$Time), ]
@@ -219,8 +217,8 @@ the difference between $\alpha^{*}$ and $\alpha$.
 For HIPPO-2 and all projects before SPRITES-II, there is the problem that
 the highest-quality measurement of the rate of climb of the aircraft, GGVSPD,
 was not available. The alternatives are VSPD and VSPD\_G, the latter from the
-avionic-system GPS. Both are updated using the pressure altitude as reference,
-so both have the potential to introduce long-distance biases, especially in
+avionic-system GPS. The former is updated using the pressure altitude as reference,
+which might introduce long-distance biases, especially in
 cases like HIPPO where the flights do not return to the same airport and
 may extend through atmospheric regions with important baroclinity so that
 there can be an important gradient in geometric altitude for flight along a
@@ -238,9 +236,9 @@ for the new variable than for VSPD\_G, so VSPD\_G will be used in the following.
 
 <<vw-rf1, include=TRUE, fig.cap=FCap1>>=
 
-Data$AOAREF <- (Data$PITCH - Data$VSPD_G / Data$TASF * 180 / pi) 
-Data$AOAREF <- (Data$PITCH - Data$GGVS / Data$TASF * 180 / pi) 
-Data <- Data[(Data$AOAREF > 1) & (Data$AOAREF < 6), ]
+Data$AOAREF <- (Data$PITCH - (Data$VSPD_G / Data$TASF) * (180 / pi)) 
+# Data$AOAREF <- (Data$PITCH - (Data$GGVS / Data$TASF) * (180 / pi)) 
+# Data <- Data[(Data$AOAREF > 1) & (Data$AOAREF < 6), ]
 # - Data$ADIFR / Data$QCF * 21.22 
 # Data$AOAREF <- SmoothInterp (Data$AOAREF)
 Data$WICS <- SmoothInterp (Data$WIC)
@@ -268,16 +266,20 @@ at levels well above the surface where they may have arisen in the course of
 speed runs. It appears that if TASX is required to exceed 130~m/s or the Mach
 number to exceed 0.38 in the case where GGALT is greater than 2000, this provide a suitable delineation between
 these two cases, so that will be used to qualify data for this study.
-In addition, brief periods at the start and end of flights were excluded
-to avoid flight segments that otherwise produced large residual error.
+\item A few other regions needed to be excluded because it appeared that ADIFR was questionable, perhaps
+because there were blockages in the lines or apertures.
+\end{enumerate}
+
 Only the flight times listed in the following table were used for
-that reason:\\
+those reasons:\\
  %
 \begin{tabular}{|c|c|c|}
 \hline 
 \textbf{Flight}  & \textbf{Start {[}UTC{]}}  & \textbf{End {[}UTC{]}}\tabularnewline
 \hline 
-\hline 
+\hline
+tf02 & 172115 & 213214 \tabularnewline
+\hline
 rf01  & 17:40:00  & 22:10:00\tabularnewline
 \hline rf02  & 15:10:00  & 21:00:00\tabularnewline
 \hline 
@@ -289,10 +291,22 @@ rf03  & 21:09:05  & 22:15:00\tabularnewline
  \hline
  & 25:10:00 & 28:00:00\tabularnewline
 \hline
-rf05 & 21:30:00 & 
+rf05 & 21:30:00 & 271217\tabularnewline
+\hline
+rf06 & 212555 & 285500\tabularnewline
+\hline
+rf07 & 211308 & 285407\tabularnewline
+\hline
+rf08 & 230239 & 312526\tabularnewline
+\hline
+rf09 & 201032 & 274108\tabularnewline
+\hline
+rf10 & 191046 & 262346\tabularnewline
+\hline
+rf11 & 184042 & 232044\tabularnewline
+\hline
 \end{tabular}
-\item (altitude variation?)
-\end{enumerate}
+
 
 \section{New coefficients using the standard formula}
 
@@ -307,39 +321,30 @@ SummarizeFit <- function(ft) {
 }
 
 Data$QR <- Data$ADIFR / Data$QCF
-DQ <- Data
-# DQ <- DQ[DQ$RF == 10, ]
-# DQ <- Data[Data$PSXC > 250, ]
-f <- lm (AOAREF~QR+I(QR*M), data=DQ)
-# SummarizeFit(f)
+f <- lm (AOAREF~QR+I(QR*M), data=Data)
 cf <- coef(f)
-# f <- lm (AOAREF~QR+I(QR*M)+Time, data=DQ)
-# SummarizeFit(f)
-# f <- lm (AOAREF~QR+I(QR*M)+M, data=DQ)
-# SummarizeFit(f)
 
 @
 
 A fit of (\ref{eq:stdAOA}) to the composite data, qualified as in
-Sect.~3, led to best-fit coefficients \{$c_{1--3}$\} = \{4.187,
-14.867, 6.797\}. A comparison of the angle of attack produced by (1)
+Sect.~3, led to best-fit coefficients \{$c_{1--3}$\} = \{\Sexpr{round(cf[1], 3)},
+\Sexpr{round(cf[2], 3)}, \Sexpr{round(cf[3], 3)}\}. A comparison of the angle of attack produced by (1)
 with these coefficients to the reference values given by (\ref{eq:alpha-star})
 is shown in Fig.~\ref{fig:summarize-fit}. The residual standard
-deviation for this fit is reduced slightly from the preliminary fit,
-from 0.12$^{\circ}$ to 0.10$^{\circ}$, so it appears worthwhile
+deviation for this fit was reduced slightly (about 10\%) from the fit that used only the first term,
+so it appears worthwhile
 to use this three-coefficient fit instead. Several other options were
 considered, including direct dependence on Mach number, air density,
 pressure, altitude, and powers and products of these, but none provided
-significant (>0.01) reduction in the standard deviation of the residuals
-so it does not appear useful to include more complex terms in the
-fit.
+significant (>0.01) further reduction in the standard deviation of the residuals
+so it does not appear useful to include more complex terms in the fit.
 
 <<summarize-fit, include=TRUE, fig.cap="Calculated value of angle of attack vs the reference value used in the fit.">>=
 
 SummarizeFit(f)
-Data$AK <- cf[1] + Data$ADIFR/Data$QCF * (cf[2] + cf[3] * Data$M)
-DQ$AK <- cf[1] + DQ$ADIFR/DQ$QCF * (cf[2] + cf[3] * DQ$M)
-plot (DQ$AOAREF, DQ$AK, pch=20, col='blue', xlab='Reference Value [deg.]', ylab='Calculated Value from (1)')
+      ## new angle-of-attack
+Data$AK <- cf[1] + Data$QR * (cf[2] + cf[3] * Data$M)
+plot (Data$AOAREF, Data$AK, pch=20, col='blue', xlab='Reference Value [deg.]', ylab='Calculated Value from (1)')
 lines (c(1,4.5), c(1,4.5), lwd=3, lty=2, col='darkorange')
 
 @
@@ -377,11 +382,21 @@ set of sensitivity coefficients.
 
 <<new-vw, include=TRUE, fig.cap="As for Fig.\ 1 but adding the new variable WIX for the vertical wind.">>=
 
-Data$WIX <- Data$WIC + (Data$AK-Data$AKRD)*pi*Data$TASF/180. - (Data$GGVS-Data$VSPD_G)
+Data$WIX <- Data$WIC + (Data$AK-Data$AKRD)*pi*Data$TASF/180. ## - (Data$GGVS-Data$VSPD_G)
 Data$WIXS <- SmoothInterp (Data$WIX)
-V <- c("Time", "WIC", "WICS", "WIXS")
+Data$GGVSPD <- Data$VSPD_G   ## needed by WindProcessor; GGVSPD not available
+DataW <- Data
+DataW <- WindProcessor(DataW) ## WIN is now based on old coefficients
+Data$WICN <- DataW$WIN
+DataW <- Data
+DataW$ATTACK <- DataW$AKRD <- DataW$AK       ## replace by new-cal-coef value
+DataW <- WindProcessor(DataW)  ## will then have both WICN and WIN
+Data$WIN <- DataW$WIN
+Data$WICNS <- SmoothInterp (Data$WICN)
+Data$WINS  <- SmoothInterp (Data$WIN)
+V <- c("Time", "WIC", "WICNS", "WINS")
 D3 <- Data[Data$RF == 3, ]
-plotWAC(D3[, V], col=c('blue', 'red', 'darkorange'), lwd=c(1,2,3),legend.position='top')
+plotWAC(D3[, V], col=c('blue', 'darkgreen', 'red'), lwd=c(1,2,3),legend.position='top')
 
 
 <<WIXvsGGALT, include=TRUE, eval=TRUE, fig.cap="WIX vs GGALT for all measurements from the eleven research flights and one test flight used for this study.">>=
@@ -390,12 +405,15 @@ plotWAC(D3[, V], col=c('blue', 'red', 'darkorange'), lwd=c(1,2,3),legend.positio
 # D1 <- D1[abs(D1$VSPD_G) < 3, ]
 # D2 <- Data[Data$RF == 2,]
 # D2 <- D2[abs(D2$VSPD_G) < 3, ]
-plot(Data$GGALT, Data$WIX, pch=20, col='blue', xlim=c(0,15000))
-lines(c(0,15000),c(0,0), lwd=3, lty=2, col='darkorange')
+# plot(Data$GGALT, Data$WIX, pch=20, col='blue', xlim=c(0,15000))
+# lines(c(0,15000),c(0,0), lwd=3, lty=2, col='darkorange')
+
+<<all-flights, include=TRUE, fig.cap="recalculated vertical wind WICN and, with new coefficients, WIN">>=
+
 for (i in 1:11){
-  plotWAC(Data[Data$RF == i, c("Time", "WIX", "WIXS")])
-  lineWAC(Data$Time, Data$GGVS/10, col='red')
-  title(sprintf("Flight %d mean w = %.2f", i, mean(Data[Data$RF == i, "WIX"], na.rm=TRUE)))
+  plotWAC(Data[Data$RF == i, c("Time", "WIN", "WINS")])
+  lineWAC(Data$Time, Data$GGVS/10, col='green')
+  title(sprintf("Flight %d mean w = %.2f", i, mean(Data[Data$RF == i, "WIN"], na.rm=TRUE)))
 }
 
 
@@ -411,12 +429,13 @@ Reproducibility:
 \textsf{\textsc{\textcolor{blue}{Project:}}} & \Sexpr{thisFileName}\tabularnewline
 \textsf{\textsc{\textcolor{blue}{Archive package:}}} & \Sexpr{thisFileName}.zip\tabularnewline
 \textsf{\textsc{\textcolor{blue}{Contains:}}} & attachment list below\tabularnewline
-\textsf{\textsc{\textcolor{blue}{Program:}}} & \Sexpr{thisFileName}.Rnw\tabularnewline
-\textsf{\textsc{\textcolor{blue}{Original Data:}}} & /scr/raf\_data/\Sexpr{Project}/\Sexpr{Flight}.nc \tabularnewline
-\textsf{\textsc{\textcolor{blue}{Git:}}} & git@github.com:WilliamCooper/\Sexpr{thisFileName}.git\tabularnewline
+\textsf{\textsc{\textcolor{blue}{Program:}}} & AKRDforHIPPO2a.Rnw\tabularnewline
+\textsf{\textsc{\textcolor{blue}{Original Data:}}} & /scr/raf\_data/\Sexpr{Project}/\Sexpr{Flight}.nc, etc \tabularnewline
+\textsf{\textsc{\textcolor{blue}{Data Archive:}}} & NCAR HPSS (not github) \tabularnewline
+\textsf{\textsc{\textcolor{blue}{Git:}}} & https://github.com/WilliamCooper/Reprocessing.git\tabularnewline
 \end{tabular}
 
-\attachm{\Sexpr{thisFileName}.Rnw\\\Sexpr{thisFileName}.pdf\\\Sexpr{SaveRData}\\SessionInfo}
+\attachm{AKRDforHIPPO2a.Rnw\\AKRDforHIPPO2a.pdf\\SessionInfo}
 %\cc{first attachment\\second\\3rd att}
 %\attach{attachment}
 %\attachm{first\\second} %\cc{first attachment\\second\\3rd att}
@@ -425,13 +444,13 @@ cat (toLatex(sessionInfo()), file="SessionInfo")
 
 @ 
 <<make-zip-archive, echo=TRUE, INCLUDE=TRUE>>=
-system (sprintf("zip %s.zip %s.Rnw %s.pdf SessionInfo %s", thisFileName, thisFileName, thisFileName, SaveRData))
+system (sprintf("zip %s.zip AKRDforHIPPO2a.Rnw AKRDforHIPPO2a.pdf SessionInfo", thisFileName))
 
 @ 
 
 %\attach{attachment}
 
-\attachm{ProgramFile\\Document.pdf\\SaveRData}
+%\attachm{ProgramFile\\Document.pdf\\SaveRData}
 
 %\cc{first attachment\\second\\3rd att}
 \end{document}
